Fix long link line break in Chrome

--- a/css/style.scss
+++ b/css/style.scss
@@ -82,6 +82,7 @@ $screen-lg-min: 1200px;
   a:active {
     color: $white;
     white-space: nowrap;
+    word-break: break-all;
   }
 
   a:not(.active):hover {
